# phonemizer

./: .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.oberon.md  api_reference.html  changelog.html  cli.html  common_issues.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  python_examples.html  search.html  searchindex.js  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: doc.yaml  linux.yaml  linux_espeak_versions.yaml  linux_python_versions.yaml  macos.yaml  publish_pypi.yaml  python_versions.yaml  windows.yaml
_sources/: api_reference.rst.txt  changelog.rst.txt  install.rst.txt  python_examples.rst.txt
docs/source/: api_reference.rst  changelog.rst  cli.rst  common_issues.rst  conf.py  index.rst  install.rst  python_examples.rst
paper/: Makefile  paper.bib  paper.md
phonemizer/: __init__.py  backend.py  espeak.py  festival.py  lispy.py  logger.py  main.py  phonemize.py  phonemizer.py  punctuation.py  separator.py  utils.py  version.py
phonemizer/backend/: __init__.py  base.py  espeak-mbrola.py  espeak.py  espeak_mbrola.py  festival.py  segments.py
phonemizer/backend/espeak/: __init__.py  api.py  base.py  espeak.py  language_switch.py  mbrola.py  voice.py  words_mismatch.py  wrapper.py
phonemizer/backend/espeak_sampa_replacement/: fr-fr.yaml
phonemizer/backend/festival/: __init__.py  festival.py  lispy.py
phonemizer/share/: cree.g2p  inuktitut.g2p  phonemize.scm  yucatec.g2p
phonemizer/share/espeak/: sampa_fr-fr.txt
phonemizer/share/festival/: phonemize.scm
phonemizer/share/segments/: chintang.g2p  japanese.g2p  sesotho.g2p
test/: test_backends.py  test_espeak.py  test_espeak_lang_switch.py  test_espeak_word_mismatch.py  test_espeak_wrapper.py  test_festival.py  test_import.py  test_main.py  test_mbrola.py  test_phonemize.py  test_phonemizer.py  test_punctuation.py  test_segments.py  test_separator.py  test_utils.py
test/data/: pg67147.txt
