[tool:pytest]
minversion = 5.0
testpaths = test
python_files = test/*.py
filterwarnings =
    # ignore some deprecation warnings (on regexp escape sequence) for segments
    # module and its dependencies
    ignore::DeprecationWarning:.*segments.*
    ignore::DeprecationWarning:.*csvw.*
    ignore::DeprecationWarning:.*clldutils.*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build

[coverage:run]
command_line = -m pytest
source = phonemizer

[coverage:report]
exclude_lines =
    pragma: nocover
    @abc.abstractmethod

[metadata]
description-file = README.md